force-app/main/default/objects/Assignment_Log__c/fields/Assigned_User__c.field-meta.xml
<CustomField>
    <fullName>Assigned_User__c</fullName>
    <label>Assigned User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>AssignmentLogs</relationshipName>
    <type>Lookup</type>
</CustomField>