force-app/main/default/objects/Assignment_Log__c/fields/Top_Reason__c.field-meta.xml
<CustomField>
    <fullName>Top_Reason__c</fullName>
    <label>Top Reason</label>
    <type>TextArea</type>
    <length>255</length>
</CustomField>