force-app/main/default/objects/Assignment_Log__c/fields/Was_AI_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Was_AI_Assigned__c</fullName>
    <label>Was AI Assigned</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>